# do-floating-ip-k8s

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: anchor-ip-annotator-build.yml  build.yml  controller-build.yml
anchor-ip-annotator/: Cargo.toml  Dockerfile  README.md
anchor-ip-annotator/kubernetes/: clusterrole.yaml  clusterrolebinding.yaml
anchor-ip-annotator/src/: annotator.rs  digital_ocean_metadata.rs  main.rs
floating-ip-controller/: Cargo.toml  Dockerfile
floating-ip-controller/src/: controller.rs  kubernetes_helpers.rs  logging.rs  main.rs
kubernetes/: cluster-role-binding.yaml  cluster-role.yaml  daemonset-annotator.yaml  deployment-controller.yaml  digital-ocean-token.md  redirect-policy.yaml  service-account.yaml  test-pod.yaml
src/: annotator.rs  controller.rs  digital_ocean_metadata.rs  errors.rs  floating_ip.rs  lib.rs  logging.rs
