[package]
name = "do-floating-ip-k8s"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
description = "Floating IP controller for DigitalOcean K8S"
readme = "README.md"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "^1.0.52"
thiserror = "^1.0.30"
# Use this branch till:
# * https://github.com/LoganDark/digitalocean/issues/1 is addressed properly
# * We can use RusTLS with it
digitalocean = { git = "https://github.com/haimgel/digitalocean", branch = "do-floating-ip" }
futures = "^0.3.19"
kube = { version = "^0.65.0", features = ["client", "runtime", "derive", "rustls-tls" ], default-features = false }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_20"] }
lazy_static = "^1.4.0"
reqwest = { version = "^0.11.8", features = ["rustls-tls", "json"], default-features = false }
regex = "^1.5.4"
serde = "^1.0.132"
serde_json = "^1.0.73"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread" ] }
tracing = "^0.1.29"
tracing-subscriber = { version = "^0.3.5", features = ["env-filter", "json" ] }
