[package]
name = "anchor-ip-annotator"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
description = "A sidecar container to annotate the pod with Digital Ocean anchor IP address"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "^1.0.52"
kube = { version = "^0.65.0", features = ["runtime","derive", "native-tls"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_20"] }
reqwest = { version = "^0.11.8", features = ["native-tls", "json"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread" ] }
tracing = "^0.1.29"
tracing-subscriber = { version = "^0.3.5", features = ["env-filter", "json" ] }
serde = "^1.0.132"
serde_json = "^1.0.73"
