[package]
name = "floating-ip-controller"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
description = "Floating IP controller for DigitalOcean K8S"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "^1.0.52"
thiserror = "^1.0.30"
# Use this branch (https://github.com/phaynes/digitalocean) till https://github.com/LoganDark/digitalocean/issues/1 is addressed properly
# digitalocean = { version = "^0.1.1", path = "../../digitalocean" }
digitalocean = { version = "^0.1.1", git = "https://github.com/phaynes/digitalocean", branch = "hotfix_branch", features = [] }
futures = "^0.3.19"
kube = { version = "^0.65.0", features = ["default", "runtime", "derive" ] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_20"] }
reqwest = { version = "^0.11.8" }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread" ] }
# hyper-tls = { version = "^0.5.0", features = [] }
tracing = "^0.1.29"
tracing-subscriber = { version = "^0.3.5", features = ["env-filter", "json" ] }
serde = "^1.0.132"
serde_json = "^1.0.73"
lazy_static = "^1.4.0"
regex = "^1.5.4"